--- a/app/src/main/res/layout/activity_tvfavorites.xml
+++ b/app/src/main/res/layout/activity_tvfavorites.xml
@@ -4,9 +4,27 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.morganh.destroyer.tvreminder.TVFavorites">
+    tools:context="com.morganh.destroyer.tvreminder.TVFavorites"
+    android:id="@+id/searchContainer">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <EditText android:id="@+id/searchMessage"
+            android:hint="@string/SearchShow_message"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".7"/>
+
+        <Button
+            android:id="@+id/searchButton"
+            android:text="@string/SearchButton_message"
+            android:onClick="searchShow"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".3"/>
+
+    </LinearLayout>
 </RelativeLayout>
