--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/favorites"
+        android:text="Favorites"
+        android:onClick="loadFavorites"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Favorites"
-        android:id="@+id/favorites"
         android:layout_marginTop="99dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="35dp"
-        android:layout_marginStart="35dp"
-        android:onClick="loadFavorites"/>
+        android:layout_marginStart="35dp"/>
 
 </RelativeLayout>
