--- a/app/src/main/res/layout/activity_tvfavorites.xml
+++ b/app/src/main/res/layout/activity_tvfavorites.xml
@@ -10,9 +10,11 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/linearLayout">
 
-        <EditText android:id="@+id/searchMessage"
+        <EditText
+            android:id="@+id/searchMessage"
             android:hint="@string/SearchShow_message"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -27,4 +29,26 @@
             android:layout_weight=".3"/>
 
     </LinearLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Add To Favorites"
+        android:id="@+id/addToFavorites"
+        android:onClick="favoriteShow"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:clickable="false"/>
+
+    <ImageView
+        android:id="@+id/showThumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"
+        android:layout_below="@+id/addToFavorites"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
 </RelativeLayout>
